tests/programs/invalid/FinalFieldExample.java
public class FinalFieldExample {
    private final int finalField = 5;  // Invalid final field
}
